--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_enfermeiros">Enfermeiros</string>
     <string name="menu_pessoas">Pessoas</string>
+    <string name="novo_enfermeiro">Novo Enfermeiro</string>
+    <string name="alterar_enfermeiro">Alterar Enfermeiro</string>
+    <string name="eliminar_enfermeiro">Eliminar Enfermeiro</string>
 </resources>
