--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="erro_inserir_enfermeiro">Erro ao inserir enfermeiro</string>
     <string name="erro_alterar_enfermeiro">Erro ao alterar enfermeiro</string>
     <string name="enfermeiro_guardado_sucesso">Enfermeiro guardado com sucesso</string>
+    <string name="erro_eliminar_enfermeiro">Erro ao eliminar enfermeiro</string>
+    <string name="enfermeiro_eliminado_sucesso">Enfermeiro eliminado com sucesso</string>
+
 
     <string name="versao">Covid v. 1.0</string>
 </resources>
