--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="nova_pessoa">Nova Pessoa</string>
     <string name="alterar_pessoa">Alterar Pessoa</string>
     <string name="eliminar_pessoa">Eliminar Pessoa</string>
+    <string name="elimina_pessoa_fragment_label">Eliminar pessoa?</string>
     <string name="novo">Novo</string>
     <string name="alterar">Alterar</string>
     <string name="eliminar">Eliminar</string>
