--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_enfermeiros">Enfermeiros</string>
     <string name="menu_pessoas">Pessoas</string>
+    <string name="menu_vacinas">Vacinas</string>
     <string name="novo_enfermeiro">Novo Enfermeiro</string>
     <string name="alterar_enfermeiro">Alterar Enfermeiro</string>
     <string name="eliminar_enfermeiro">Eliminar Enfermeiro</string>
@@ -48,5 +49,7 @@
 
     <string name="versao">Covid v. 1.0</string>
     <string name="data_nascimento">Data Nascimento</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
