Adicionado os botões para navegar para as diferentes listas a partir do nav_home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,8 @@
 
     <string name="versao">Covid v. 1.0</string>
     <string name="data_nascimento">Data Nascimento</string>
+    <string name="lista_de_enfermeiros">Lista de Enfermeiros</string>
+    <string name="lista_de_pessoas">Lista de Pessoas</string>
+    <string name="lista_de_vacinas">Lista de Vacinas</string>
 
 </resources>
