--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="lista_de_pessoas">Lista de Pessoas</string>
     <string name="lista_de_vacinas">Lista de Vacinas</string>
     <string name="menu_doses">Doses</string>
+    <string name="imagem_inicial">imagem_inicial</string>
 
 </resources>
