Criado fragmento para a edição da dose (e navegação)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="erro_alterar_vacina">Erro ao alterar Vacina</string>
     <string name="erro_eliminar_vacina">Erro ao eliminar Vacina</string>
     <string name="vacina_eliminada_sucesso">Vacina eliminada com sucesso</string>
+    <string name="erro_alterar_dose">Erro ao alterar Dose</string>
 
     <string name="erro_inserir_dose">Erro ao inserir dose</string>
     <string name="dose_guardado_sucesso">Dose guardada com sucesso</string>
