--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="erro_eliminar_vacina">Erro ao eliminar Vacina</string>
     <string name="vacina_eliminada_sucesso">Vacina eliminada com sucesso</string>
     <string name="erro_alterar_dose">Erro ao alterar Dose</string>
+    <string name="erro_eliminar_dose">Erro ao eliminar Dose</string>
+    <string name="dose_eliminado_sucesso">Dose eliminada com sucesso</string>
 
     <string name="erro_inserir_dose">Erro ao inserir dose</string>
     <string name="dose_guardado_sucesso">Dose guardada com sucesso</string>
